video overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,10 @@ p{
     display: none;
 }
 
+video{
+    max-width: 100%;
+}
+
 @media (max-width: 1024px) {
     #follower{
         width: 50px;
